fix .text-wrap

--- a/packages/components/src/components/core-button/core-button.less
+++ b/packages/components/src/components/core-button/core-button.less
@@ -617,6 +617,7 @@
   }
 
   .text-wrap {
+    min-height: 16px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
